<resources>
    <string name="app_name">Raakto</string>

    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="phoneNumber">Phone</string>
    <string name="age">Age</string>
    <string name="bloodGroup">Blood Grp</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="save">SAVE</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_page">SearchPageActivity</string>
</resources>
